--- a/openflow_input/oxm-1.2
+++ b/openflow_input/oxm-1.2
@@ -368,6 +368,8 @@ struct of_oxm_sctp_src_masked : of_oxm {
     uint16_t value_mask;
 };
 
+
+
 struct of_oxm_tcp_dst : of_oxm {
     uint32_t type_len == 0x80001c02;
     uint16_t value;
@@ -433,3 +435,10 @@ struct of_oxm_vlan_vid_masked : of_oxm {
     uint16_t value;
     uint16_t value_mask;
 };
+
+//Need to calculate the type_len for the struct below
+struct of_oxm_quic_stream_id : of_oxm {
+    uint32_t type_len == 0x80002402;
+    uint16_t value;
+};
+
